# MetaLattice

./: .buildinfo  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  INSTALL.md  LICENSE  MANIFEST.in  README.md  environment.yml  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  release.html  requirements_doc.txt  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py
.github/workflows/: gh-pages.yml  metalattice-check.yml  python-publish-Anaconda.yml  python-publish-PyPI.yml  python-publish.yml
_sources/dev/: index.rst.txt
_sources/reference/: index.rst.txt
_static/: documentation_options.js
conda/: meta.yaml
dev/: index.html
docs/: conf.py  getting_started.rst  index.rst  release.rst  requirements.txt
docs/_templates/autosummary/: module.rst
docs/reference/: fem.rst  plotter.rst
docs/source/: conf.py  index.rst
docs/source/_static/: metalattice.css  switcher.json
docs/source/reference/: abaqus.rst  geom.rst  index.rst  lattice.rst  main_namespace.rst  material.rst
docs/source/release/: index.rst
docs/source/user/: index.rst
docs/tutorial/: index.rst
plots/: logo.py
reference/: fem.html  index.html  plotter.html
src/metalattice/: __init__.py  _version.py  logo.py
src/metalattice/abaqus/: __init__.py
src/metalattice/fem/: __init__.py
src/metalattice/geom/: __init__.py
src/metalattice/lattice/: __init__.py
src/metalattice/material/: __init__.py
src/metalattice/plotter/: __init__.py  plot.py
tests/: test_basic.py
tutorial/: index.html
(+2 files in other folders)
